# gesture

./: CMakeLists.txt  README.md  VersionConfig.h.in  eventgroup.cpp  eventgroup.h  inferenceEngine.cpp  inferenceEngine.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  yolov5.cpp  yolov5.h
project/: mainwindow.ui  yolov5.h
